--- a/templates/agent/speciality/create.html.twig
+++ b/templates/agent/speciality/create.html.twig
@@ -11,7 +11,7 @@
         {{ form_row(form.name) }}
         <label for="">Description de la specialité</label>
         {{ form_row(form.description) }}
-        {{ form_widget(form.submit, { 'label': 'Crée sont compte' }) }}
+        {{ form_widget(form.submit, { 'label': 'Crée la spécialité' }) }}
         {{ form_end(form) }}
     </div>
 
