--- a/templates/agent/speciality/edit.html.twig
+++ b/templates/agent/speciality/edit.html.twig
@@ -1,17 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Ajouter une spécialité{% endblock %}
+{% block title %}Modifier une spécialité{% endblock %}
 
 {% block body %}
 
     <div class="container">
-        <h1 class="h3 mb-3 font-weight-normal mt-5 pt-5">Crée la spécialité</h1>
+        <h1 class="h3 mb-3 font-weight-normal mt-5 pt-5">Modifier la spécialité</h1>
         {{ form_start(form) }}
         <label for="">Nom de la specialité</label>
         {{ form_row(form.name) }}
         <label for="">Description de la specialité</label>
         {{ form_row(form.description) }}
-        {{ form_widget(form.submit, { 'label': 'Crée la spécialité' }) }}
+        {{ form_widget(form.submit, { 'label': 'Modifier la spécialité' }) }}
         {{ form_end(form) }}
     </div>
 
