feature: create edit country + test, fixed hiding place edit create test and form fix

--- a/templates/admin/hidingPlace/create.html.twig
+++ b/templates/admin/hidingPlace/create.html.twig
@@ -13,6 +13,8 @@
         {{ form_row(form.postalCode) }}
         <label for="">Ville</label>
         {{ form_row(form.city) }}
+        <label for="">Pays</label>
+        {{ form_row(form.country) }}
         <label for="">Type de planque</label>
         {{ form_row(form.type) }}
         {{ form_widget(form.submit, { 'label': "Ajouter la planque" }) }}
