--- a/templates/layout/_navbar.html.twig
+++ b/templates/layout/_navbar.html.twig
@@ -10,27 +10,30 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('homePage') }}">Page Accueil</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('create_agent') }}">Agent</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('create_contact') }}">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('create_speciality') }}">Spécialité</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('create_target') }}">Target</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('create_nationality') }}">Nationnalité</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('create_hidingPlace') }}">Planque</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('create_mission') }}">Mission</a>
-                </li>
+                {% if is_granted('ROLE_ADMIN') %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('create_agent') }}">Agent</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('create_contact') }}">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('create_speciality') }}">Spécialité</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('create_target') }}">Target</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('create_nationality') }}">Nationnalité</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('create_hidingPlace') }}">Planque</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('create_mission') }}">Mission</a>
+                    </li>
+                {% endif %}
+
             </ul>
         </div>
     </div>
