--- a/templates/layout/_navbar.html.twig
+++ b/templates/layout/_navbar.html.twig
@@ -10,8 +10,16 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('homePage') }}">Page Accueil</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="">Liste des missions</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Liste</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="{{ path('list_agent') }}">Tous les agents</a>
+                        <a class="dropdown-item" href="{{ path('list_contact') }}">Tous les contacts</a>
+                        <a class="dropdown-item" href="{{ path('list_target') }}">Toutes les cibles</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{{ path('list_contact') }}">Tous les pays</a>
+                        <a class="dropdown-item" href="{{ path('list_target') }}">Toutes les nationnalité</a>
+                    </div>
                 </li>
                 {% if is_granted('ROLE_ADMIN') %}
                     <li class="nav-item dropdown">
