--- a/templates/layout/_navbar.html.twig
+++ b/templates/layout/_navbar.html.twig
@@ -19,6 +19,10 @@
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="{{ path('list_contact') }}">Tous les pays</a>
                         <a class="dropdown-item" href="{{ path('list_target') }}">Toutes les nationnalité</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{{ path('list_speciality') }}">Tous les spécialité</a>
+                        <a class="dropdown-item" href="{{ path('list-hidingPlace') }}">Toutes les planques</a>
+                        <a class="dropdown-item" href="{{ path('list_missions') }}">Toutes les missions</a>
                     </div>
                 </li>
                 {% if is_granted('ROLE_ADMIN') %}
